============================= 2.15.0 ======================

2006-08-07  Kjartan Maraas  <kmaraas@gnome.org>

	* bonobo/bonobo-control.h:
	* bonobo/bonobo-widget.h:
	Sentinel markup patch from Marcus Meissner
	Closes bug #308444.

2006-08-07  Kjartan Maraas  <kmaraas@gnome.org>

	* bonobo/bonobo-ui-engine.c: (check_excess_widgets):
	Use G_OBJECT_GET_CLASS() to before passing stuff on to
	G_OBJECT_CLASS_NAME(). Patch from Narayana Pattipati.
	Closes bug #109883.

2006-08-07  Kjartan Maraas  <kmaraas@gnome.org>

	* bonobo/bonobo-ui-preferences.c:
	(bonobo_ui_preferences_get_toolbar_style): Fix for
	strict aliasing warning from GCC. Patch from
	mmeisner at suse de. Closes bug #308446.
	* configure.in: Bump version.

2006-08-04  Kjartan Maraas  <kmaraas@gnome.org>

	* samples/canvdemo/circle.c: Fix headers.
	* samples/canvdemo/square.c: Fix headers.
	* samples/controls/bonobo-sample-controls.c: Same here.

2006-06-17  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* bonobo/bonobo-dock-item.c: (bonobo_dock_item_detach):
	Fixes bug #167944. One can move detached toolbars 
	again.

2006-06-17  Kjartan Maraas  <kmaraas@gnome.org>

	* tools/browser/oaf-helper.c: (get_lang): Patch from
	Joe Marcus Clarke to fix a crash when LANG is NULL.
	Closes bug #166430. 

2006-06-17  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Patch from Przemysław Grzegorczyk for
	po/LINGUAS support.
	* po/LINGUAS: Closes bug #338544.

2006-06-16  Tor Lillqvist  <tml@novell.com>

	* tools/browser/oaf-helper.c: Use g_win32_getlocale() on Win32.

2006-05-17  Kjartan Maraas  <kmaraas@gnome.org>

	* bonobo/bonobo-canvas-component.c: (bonobo_canvas_new):
	* bonobo/bonobo-canvas-item.c:
	* bonobo/bonobo-control-frame.c:
	(bonobo_control_frame_get_remote_window):
	* bonobo/bonobo-control.c: (bonobo_control_window_id_from_x11),
	(create_plug), (impl_Bonobo_Control_getWindowId),
	(bonobo_control_construct), (bonobo_control_do_popup_full):
	* bonobo/bonobo-dock-band.c: (bonobo_dock_band_remove),